- Cleaned up Armitage -> SOCKS Proxy job management code. The code to
  check if a proxy server is up was deadlock prone. Removed it.
- Starting SOCKS Proxy module now opens a tab displaying the module
  start process. An event is posted to the event log too.
- Created an option helper to select credentials for SMBUser, SMBPass, 
  USERNAME, and PASSWORD. 

4 Jan 13 (tested against msf 16252)
--------
- Added a helper to set REXE option
- Added an icon to represent Windows 8
- [host] -> Login menu is now built using open services for all 
  highlighted hosts, not just the first one.
- [host] -> Login items now escape punctuation characters in passwords
  before passing them to a framework module.
- Added the windows and linux postgres_payload exploits to the use a
  reverse payload by default list.
- Small tweak to allow Armitage to work with Metasploit 4.5 installed
  environment on Windows.

Cortana Updates (for scripters)
--------
- &credential_add and &credential_delete no longer break when a 
  password has creative punctuation in it.

26 Nov 12 (tested against msf 16114)
---------
- Windows command shell tab is now friendlier to commands that prompt
  for input (e.g., time command)
- [host] -> Meterpreter -> Access -> Escalate Privileges now shows all
  the framework's new exploit/windows/local modules too
- [host] -> Shell -> Post Modules now shows the framework's unix/local 
  and exploit/linux/local modules
- Added Ctrl+I shortcut. Lets you choose a session to interact with.
- Added Steal Token button to Processes dialog.
- Armitage now asks Metasploit for a non-expiring authentication token.
  This will prevent Armitage from losing its access to msfrpcd when you
  put your computer to sleep or pause the VM running Metasploit.
- add_user and add_[local]group_user now show all of their output when
  the -h flag is used to operate on a remote host.
- added a Delete menu to creds table. Right-click a cred to delete it

Cortana Updates (for scripters)
--------